--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             <div class="mb-4">
                 <label class="block text-gray-700 mb-2">Contraseña</label>
                 <input id="regPassword" type="password" class="w-full px-3 py-2 border rounded" />
+                <small class="text-gray-500 block mt-1">
+                    La contraseña debe contener: 8+ caracteres, 1 mayúscula, 1 minúscula, 1 número y 1 carácter especial (@$!%*?&)
+                </small>
+                <div id="passwordFeedback" class="text-xs mt-1 space-y-1"></div>
             </div>
             <div class="mb-6">
                 <label class="block text-gray-700 mb-2">Rol</label>
